Project

General

Profile

Actions

Bug #18573

closed

bluestore: reclaim_blocks doesn't use broken allocator interface properly

Added by Sage Weil over 7 years ago. Updated over 7 years ago.

Status:
Resolved
Priority:
Immediate
Assignee:
Category:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
kraken
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

The Allocator interface evolved into an ugly mess, and reclaim_extents fails to use it properly. Leads to SEGV when we do a reclaim.

Actions #1

Updated by Sage Weil over 7 years ago

  • Subject changed from bluestore: reclaim_extents doesn't use broken allocator interface properly to bluestore: reclaim_blocks doesn't use broken allocator interface properly
Actions #2

Updated by Sage Weil over 7 years ago

  • Status changed from Fix Under Review to Resolved
Actions

Also available in: Atom PDF