src/os/bluestore/BlueFS.cc
@@ -1794,11 +1794,20 @@ int BlueFS::_allocate(uint8_t id, uint64_t len,
     hint = ev->back().end();
   }
 
+<<<<<<< HEAD
   AllocExtentVector extents;
   extents.reserve(4);  // 4 should be (more than) enough for most allocations
   int64_t alloc_len = alloc[id]->allocate(left, min_alloc_size, hint,
                           &extents);
   if (alloc_len < (int64_t)left) {
+=======
+  int count = 0;
+  uint64_t alloc_len = 0;
+  AllocExtentVector extents;
+  r = alloc[id]->allocate(left, min_alloc_size, hint,
+                          &extents, &count, &alloc_len);
+  if (r < 0 || alloc_len < left) {
+>>>>>>> os/bluestore: manage vector from ExtentList
     derr << __func__ << " allocate failed on 0x" << std::hex << left
 	 << " min_alloc_size 0x" << min_alloc_size << std::dec << dendl;
     alloc[id]->dump();
